--- a/docs/presentation/kde_bare.tex
+++ b/docs/presentation/kde_bare.tex
@@ -105,6 +105,17 @@
 {}
 \makeatother  
 
+\AtBeginSection[]{
+	\begin{frame}
+		\vfill
+		\centering
+		\begin{beamercolorbox}[sep=8pt,center,shadow=false,rounded=false]{title}
+			\usebeamerfont{title}\insertsectionhead\par%
+		\end{beamercolorbox}
+		\vfill
+	\end{frame}
+}
+
 % -------------------------------------------------------------------------
 % Document start
 % -------------------------------------------------------------------------
@@ -120,12 +131,152 @@
 	On every data point $x_i$, we place a kernel function $K$.
 	The kernel density estimate is 
 	\begin{equation*}
-		\hat{f}(x) = \frac{1}{N} \sum_{i=1}^{N} K(x - x_i).
+	\hat{f}(x) = \frac{1}{N} \sum_{i=1}^{N} K(x - x_i).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_gaussian_1}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{What is a kernel density estimate?}
+	On every data point $x_i$, we place a kernel function $K$.
+	The kernel density estimate is 
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{N} \sum_{i=1}^{N} K(x - x_i).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_gaussian_2}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{What is a kernel density estimate?}
+	On every data point $x_i$, we place a kernel function $K$.
+	The kernel density estimate is 
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{N} \sum_{i=1}^{N} K(x - x_i).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_gaussian_3}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{What is a kernel density estimate?}
+	On every data point $x_i$, we place a kernel function $K$.
+	The kernel density estimate is 
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{N} \sum_{i=1}^{N} K(x - x_i).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_gaussian_4}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{What is a kernel density estimate?}
+	On every data point $x_i$, we place a kernel function $K$.
+	The kernel density estimate is 
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{N} \sum_{i=1}^{N} K(x - x_i).
 	\end{equation*}
 	\vfill
 	\begin{figure}
 		\centering
 		\includegraphics[width=0.8\linewidth]{figs/intro_kde_gaussian_5}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{What is a kernel density estimate?}
+	On every data point $x_i$, we place a kernel function $K$.
+	The kernel density estimate is 
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{N} \sum_{i=1}^{N} K(x - x_i).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_gaussian_6}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{What is a kernel density estimate?}
+	On every data point $x_i$, we place a kernel function $K$.
+	The kernel density estimate is 
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{N} \sum_{i=1}^{N} K(x - x_i).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_gaussian_7}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{What is a kernel density estimate?}
+	On every data point $x_i$, we place a kernel function $K$.
+	The kernel density estimate is 
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{N} \sum_{i=1}^{N} K(x - x_i).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_gaussian_8}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{What is a kernel density estimate?}
+	On every data point $x_i$, we place a kernel function $K$.
+	The kernel density estimate is 
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{N} \sum_{i=1}^{N} K(x - x_i).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_gaussian_9}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{What is a kernel density estimate?}
+	On every data point $x_i$, we place a kernel function $K$.
+	The kernel density estimate is 
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{N} \sum_{i=1}^{N} K(x - x_i).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_gaussian_10}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{What is a kernel density estimate?}
+	On every data point $x_i$, we place a kernel function $K$.
+	The kernel density estimate is 
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{N} \sum_{i=1}^{N} K(x - x_i).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_gaussian_11}
 	\end{figure}
 \end{frame}
 
@@ -152,7 +303,59 @@
 \begin{frame}[fragile, t]{Choice of kernel}
 	The \emph{triangular} kernel (or \emph{linear} kernel) is given by
 	\begin{equation*}
-		f(x) \propto \max(1 - |x|, 0).
+	f(x) \propto \max(1 - |x|, 0).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_tri_1}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Choice of kernel}
+	The \emph{triangular} kernel (or \emph{linear} kernel) is given by
+	\begin{equation*}
+	f(x) \propto \max(1 - |x|, 0).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_tri_2}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Choice of kernel}
+	The \emph{triangular} kernel (or \emph{linear} kernel) is given by
+	\begin{equation*}
+	f(x) \propto \max(1 - |x|, 0).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_tri_3}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Choice of kernel}
+	The \emph{triangular} kernel (or \emph{linear} kernel) is given by
+	\begin{equation*}
+	f(x) \propto \max(1 - |x|, 0).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_tri_4}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Choice of kernel}
+	The \emph{triangular} kernel (or \emph{linear} kernel) is given by
+	\begin{equation*}
+	f(x) \propto \max(1 - |x|, 0).
 	\end{equation*}
 	\vfill
 	\begin{figure}
@@ -162,7 +365,127 @@
 \end{frame}
 
 
+\begin{frame}[fragile, t]{Choice of kernel}
+	The \emph{triangular} kernel (or \emph{linear} kernel) is given by
+	\begin{equation*}
+	f(x) \propto \max(1 - |x|, 0).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_tri_6}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Choice of kernel}
+	The \emph{triangular} kernel (or \emph{linear} kernel) is given by
+	\begin{equation*}
+	f(x) \propto \max(1 - |x|, 0).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_tri_7}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Choice of kernel}
+	The \emph{triangular} kernel (or \emph{linear} kernel) is given by
+	\begin{equation*}
+	f(x) \propto \max(1 - |x|, 0).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_tri_8}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Choice of kernel}
+	The \emph{triangular} kernel (or \emph{linear} kernel) is given by
+	\begin{equation*}
+	f(x) \propto \max(1 - |x|, 0).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_tri_9}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Choice of kernel}
+	The \emph{triangular} kernel (or \emph{linear} kernel) is given by
+	\begin{equation*}
+	f(x) \propto \max(1 - |x|, 0).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_tri_10}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Choice of kernel}
+	The \emph{triangular} kernel (or \emph{linear} kernel) is given by
+	\begin{equation*}
+	f(x) \propto \max(1 - |x|, 0).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_tri_11}
+	\end{figure}
+\end{frame}
+
+
+
+
+
 % -------------------------------------------------------------------------
+\begin{frame}[fragile, t]{Choice of bandwidth}
+	We use $h$ to control for the \emph{bandwidth} of $\hat{f}(x)$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{Nh} \sum_{i=1}^{N} K\left(\frac{x - x_i}{h}\right).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_bw_1}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Choice of bandwidth}
+	We use $h$ to control for the \emph{bandwidth} of $\hat{f}(x)$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{Nh} \sum_{i=1}^{N} K\left(\frac{x - x_i}{h}\right).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_bw_2}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Choice of bandwidth}
+	We use $h$ to control for the \emph{bandwidth} of $\hat{f}(x)$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{Nh} \sum_{i=1}^{N} K\left(\frac{x - x_i}{h}\right).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_bw_3}
+	\end{figure}
+\end{frame}
+
+
 \begin{frame}[fragile, t]{Choice of bandwidth}
 	We use $h$ to control for the \emph{bandwidth} of $\hat{f}(x)$ by writing
 	\begin{equation*}
@@ -176,13 +499,112 @@
 \end{frame}
 
 
+\begin{frame}[fragile, t]{Choice of bandwidth}
+	We use $h$ to control for the \emph{bandwidth} of $\hat{f}(x)$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{Nh} \sum_{i=1}^{N} K\left(\frac{x - x_i}{h}\right).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_bw_5}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Choice of bandwidth}
+	We use $h$ to control for the \emph{bandwidth} of $\hat{f}(x)$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{Nh} \sum_{i=1}^{N} K\left(\frac{x - x_i}{h}\right).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_bw_6}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Choice of bandwidth}
+	We use $h$ to control for the \emph{bandwidth} of $\hat{f}(x)$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{Nh} \sum_{i=1}^{N} K\left(\frac{x - x_i}{h}\right).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_bw_7}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Choice of bandwidth}
+	We use $h$ to control for the \emph{bandwidth} of $\hat{f}(x)$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{Nh} \sum_{i=1}^{N} K\left(\frac{x - x_i}{h}\right).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_bw_8}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Choice of bandwidth}
+	We use $h$ to control for the \emph{bandwidth} of $\hat{f}(x)$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{Nh} \sum_{i=1}^{N} K\left(\frac{x - x_i}{h}\right).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_bw_9}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Choice of bandwidth}
+	We use $h$ to control for the \emph{bandwidth} of $\hat{f}(x)$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{Nh} \sum_{i=1}^{N} K\left(\frac{x - x_i}{h}\right).
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_bw_10}
+	\end{figure}
+\end{frame}
+
+
+
+
+
 % -------------------------------------------------------------------------
 \begin{frame}[fragile, t]{Choice of bandwidth - Silverman}
 	\emph{Silverman's rule of thumb} computes an optimal $h$ by assuming that the data is normally distributed. Good starting point in many cases.
 	\vfill
 	\begin{figure}
 		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_silverman_1}
+	\end{figure}
+\end{frame}
+
+\begin{frame}[fragile, t]{Choice of bandwidth - Silverman}
+	\emph{Silverman's rule of thumb} computes an optimal $h$ by assuming that the data is normally distributed. Good starting point in many cases.
+	\vfill
+	\begin{figure}
+		\centering
 		\includegraphics[width=0.8\linewidth]{figs/intro_kde_silverman_2}
+	\end{figure}
+\end{frame}
+
+\begin{frame}[fragile, t]{Choice of bandwidth - Silverman}
+	\emph{Silverman's rule of thumb} computes an optimal $h$ by assuming that the data is normally distributed. Good starting point in many cases.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_silverman_3}
 	\end{figure}
 \end{frame}
 
@@ -193,7 +615,34 @@
 	\vfill
 	\begin{figure}
 		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_ISJ_1}
+	\end{figure}
+\end{frame}
+
+\begin{frame}[fragile, t]{Choice of bandwidth - ISJ}
+	The \emph{Improved Sheather Jones} (ISJ) algorithm is more robust with respect to \emph{multimodality}.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_ISJ_2}
+	\end{figure}
+\end{frame}
+
+\begin{frame}[fragile, t]{Choice of bandwidth - ISJ}
+	The \emph{Improved Sheather Jones} (ISJ) algorithm is more robust with respect to \emph{multimodality}.
+	\vfill
+	\begin{figure}
+		\centering
 		\includegraphics[width=0.8\linewidth]{figs/intro_kde_ISJ_3}
+	\end{figure}
+\end{frame}
+
+\begin{frame}[fragile, t]{Choice of bandwidth - ISJ}
+	The \emph{Improved Sheather Jones} (ISJ) algorithm is more robust with respect to \emph{multimodality}.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_ISJ_4}
 	\end{figure}
 \end{frame}
 
@@ -207,7 +656,137 @@
 	\vfill
 	\begin{figure}
 		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_w_gaussian_1}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Weighting data}
+	It's possible to add weights $w_i$ to data points $x_i$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{h} \sum_{i=1}^{N} w_i K\left(\frac{x - x_i}{h}\right), \text{ where } \sum_{i=1}^{N} w_i = 1.
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_w_gaussian_2}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Weighting data}
+	It's possible to add weights $w_i$ to data points $x_i$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{h} \sum_{i=1}^{N} w_i K\left(\frac{x - x_i}{h}\right), \text{ where } \sum_{i=1}^{N} w_i = 1.
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_w_gaussian_3}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Weighting data}
+	It's possible to add weights $w_i$ to data points $x_i$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{h} \sum_{i=1}^{N} w_i K\left(\frac{x - x_i}{h}\right), \text{ where } \sum_{i=1}^{N} w_i = 1.
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_w_gaussian_4}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Weighting data}
+	It's possible to add weights $w_i$ to data points $x_i$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{h} \sum_{i=1}^{N} w_i K\left(\frac{x - x_i}{h}\right), \text{ where } \sum_{i=1}^{N} w_i = 1.
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_w_gaussian_5}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Weighting data}
+	It's possible to add weights $w_i$ to data points $x_i$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{h} \sum_{i=1}^{N} w_i K\left(\frac{x - x_i}{h}\right), \text{ where } \sum_{i=1}^{N} w_i = 1.
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_w_gaussian_6}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Weighting data}
+	It's possible to add weights $w_i$ to data points $x_i$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{h} \sum_{i=1}^{N} w_i K\left(\frac{x - x_i}{h}\right), \text{ where } \sum_{i=1}^{N} w_i = 1.
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
 		\includegraphics[width=0.8\linewidth]{figs/intro_kde_w_gaussian_7}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Weighting data}
+	It's possible to add weights $w_i$ to data points $x_i$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{h} \sum_{i=1}^{N} w_i K\left(\frac{x - x_i}{h}\right), \text{ where } \sum_{i=1}^{N} w_i = 1.
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_w_gaussian_8}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Weighting data}
+	It's possible to add weights $w_i$ to data points $x_i$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{h} \sum_{i=1}^{N} w_i K\left(\frac{x - x_i}{h}\right), \text{ where } \sum_{i=1}^{N} w_i = 1.
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_w_gaussian_9}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Weighting data}
+	It's possible to add weights $w_i$ to data points $x_i$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{h} \sum_{i=1}^{N} w_i K\left(\frac{x - x_i}{h}\right), \text{ where } \sum_{i=1}^{N} w_i = 1.
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_w_gaussian_10}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Weighting data}
+	It's possible to add weights $w_i$ to data points $x_i$ by writing
+	\begin{equation*}
+	\hat{f}(x) = \frac{1}{h} \sum_{i=1}^{N} w_i K\left(\frac{x - x_i}{h}\right), \text{ where } \sum_{i=1}^{N} w_i = 1.
+	\end{equation*}
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_w_gaussian_11}
 	\end{figure}
 \end{frame}
 
@@ -219,12 +798,62 @@
 	\vfill
 	\begin{figure}
 		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_mirror_1}
+	\end{figure}
+\end{frame}
+
+\begin{frame}[fragile, t]{Bounded domains}
+	A simple trick to overcome bias at boundaries is to mirror the data.
+	This ensures that $\hat{f}'(x) = 0$ at the boundary.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_mirror_2}
+	\end{figure}
+\end{frame}
+
+\begin{frame}[fragile, t]{Bounded domains}
+	A simple trick to overcome bias at boundaries is to mirror the data.
+	This ensures that $\hat{f}'(x) = 0$ at the boundary.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_mirror_3}
+	\end{figure}
+\end{frame}
+
+\begin{frame}[fragile, t]{Bounded domains}
+	A simple trick to overcome bias at boundaries is to mirror the data.
+	This ensures that $\hat{f}'(x) = 0$ at the boundary.
+	\vfill
+	\begin{figure}
+		\centering
 		\includegraphics[width=0.8\linewidth]{figs/intro_kde_mirror_4}
 	\end{figure}
 \end{frame}
 
+\begin{frame}[fragile, t]{Bounded domains}
+	A simple trick to overcome bias at boundaries is to mirror the data.
+	This ensures that $\hat{f}'(x) = 0$ at the boundary.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_mirror_5}
+	\end{figure}
+\end{frame}
 
-\section{Extension to 2D}
+\begin{frame}[fragile, t]{Bounded domains}
+	A simple trick to overcome bias at boundaries is to mirror the data.
+	This ensures that $\hat{f}'(x) = 0$ at the boundary.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/intro_kde_mirror_6}
+	\end{figure}
+\end{frame}
+
+
+\section{Extension to $d$ dimensions}
 
 
 % -------------------------------------------------------------------------
@@ -265,8 +894,96 @@
 	\end{figure}
 \end{frame}
 
+\begin{frame}[fragile, t]{The effect of norms}
+	The shape of kernel functions in higher dimensions depend on the value of $p$ in the $p$ norm.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/2D_intro_norms_tri}
+	\end{figure}
+\end{frame}
+
+\begin{frame}[fragile, t]{The effect of norms}
+	The shape of kernel functions in higher dimensions depend on the value of $p$ in the $p$ norm.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.8\linewidth]{figs/2D_intro_norms_gaussian}
+	\end{figure}
+\end{frame}
+
 
 % -------------------------------------------------------------------------
+\begin{frame}[fragile, t]{Example with data}
+	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_1}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Example with data}
+	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_2}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Example with data}
+	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_3}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Example with data}
+	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_4}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Example with data}
+	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_5}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Example with data}
+	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_6}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Example with data}
+	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_7}
+	\end{figure}
+\end{frame}
+
+
 \begin{frame}[fragile, t]{Example with data}
 	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
 	\vfill
@@ -275,6 +992,107 @@
 		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_8}
 	\end{figure}
 \end{frame}
+
+
+\begin{frame}[fragile, t]{Example with data}
+	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_9}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Example with data}
+	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_10}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Example with data}
+	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_11}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Example with data}
+	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_12}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Example with data}
+	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_13}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Example with data}
+	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_14}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Example with data}
+	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_15}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Example with data}
+	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_16}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Example with data}
+	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_17}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Example with data}
+	As the number of samples grow, the choice of both kernel $K$ and norm $p$ becomes unimportant. The bandwidth $H$ is still important.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/2D_effect_of_norms_tri_data_18}
+	\end{figure}
+\end{frame}
+
 
 
 \section{A fast algorithm}
@@ -286,7 +1104,87 @@
 	\vfill
 	\begin{figure}
 		\centering
+		\includegraphics[width=1\linewidth]{figs/linbin_0}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Linear binning}
+	Go through $N$ data points and assign weights to $n$ equidistant grid points. The algorithm runs in $\mathcal{O}(N2^d)$ time in $d$ dimensions.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/linbin_1}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Linear binning}
+	Go through $N$ data points and assign weights to $n$ equidistant grid points. The algorithm runs in $\mathcal{O}(N2^d)$ time in $d$ dimensions.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/linbin_2}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Linear binning}
+	Go through $N$ data points and assign weights to $n$ equidistant grid points. The algorithm runs in $\mathcal{O}(N2^d)$ time in $d$ dimensions.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/linbin_3}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Linear binning}
+	Go through $N$ data points and assign weights to $n$ equidistant grid points. The algorithm runs in $\mathcal{O}(N2^d)$ time in $d$ dimensions.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/linbin_4}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Linear binning}
+	Go through $N$ data points and assign weights to $n$ equidistant grid points. The algorithm runs in $\mathcal{O}(N2^d)$ time in $d$ dimensions.
+	\vfill
+	\begin{figure}
+		\centering
 		\includegraphics[width=1\linewidth]{figs/linbin_5}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Linear binning}
+	Go through $N$ data points and assign weights to $n$ equidistant grid points. The algorithm runs in $\mathcal{O}(N2^d)$ time in $d$ dimensions.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/linbin_6}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Linear binning}
+	Go through $N$ data points and assign weights to $n$ equidistant grid points. The algorithm runs in $\mathcal{O}(N2^d)$ time in $d$ dimensions.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/linbin_7}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}[fragile, t]{Linear binning}
+	Go through $N$ data points and assign weights to $n$ equidistant grid points. The algorithm runs in $\mathcal{O}(N2^d)$ time in $d$ dimensions.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/linbin_8}
 	\end{figure}
 \end{frame}
 
@@ -298,9 +1196,20 @@
 	\vfill
 	\begin{figure}
 		\centering
+		\includegraphics[width=1\linewidth]{figs/linbin_sample_1}
+	\end{figure}
+\end{frame}
+
+\begin{frame}[fragile, t]{Sample the kernel}
+	Sample the kernel function $K$ at equidistant points.
+	The $n$ binned data points and the kernel are then convolved, this runs in $\mathcal{O}(n \log n)$ time, for a total time of $\mathcal{O}(N2^d + n \log n)$.
+	\vfill
+	\begin{figure}
+		\centering
 		\includegraphics[width=1\linewidth]{figs/linbin_sample_2}
 	\end{figure}
 \end{frame}
+
 
 
 % -------------------------------------------------------------------------
@@ -309,7 +1218,61 @@
 	\vfill
 	\begin{figure}
 		\centering
+		\includegraphics[width=1\linewidth]{figs/linbin_2D_1}
+	\end{figure}
+\end{frame}
+
+\begin{frame}[fragile, t]{Linear binning in higher dimensions}
+	The extension to $d$ dimensions is relatively straightforward.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/linbin_2D_2}
+	\end{figure}
+\end{frame}
+
+\begin{frame}[fragile, t]{Linear binning in higher dimensions}
+	The extension to $d$ dimensions is relatively straightforward.
+	\vfill
+	\begin{figure}
+		\centering
 		\includegraphics[width=1\linewidth]{figs/linbin_2D_3}
+	\end{figure}
+\end{frame}
+
+\begin{frame}[fragile, t]{Linear binning in higher dimensions}
+	The extension to $d$ dimensions is relatively straightforward.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/linbin_2D_4}
+	\end{figure}
+\end{frame}
+
+\begin{frame}[fragile, t]{Linear binning in higher dimensions}
+	The extension to $d$ dimensions is relatively straightforward.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/linbin_2D_5}
+	\end{figure}
+\end{frame}
+
+\begin{frame}[fragile, t]{Linear binning in higher dimensions}
+	The extension to $d$ dimensions is relatively straightforward.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/linbin_2D_6}
+	\end{figure}
+\end{frame}
+
+\begin{frame}[fragile, t]{Linear binning in higher dimensions}
+	The extension to $d$ dimensions is relatively straightforward.
+	\vfill
+	\begin{figure}
+		\centering
+		\includegraphics[width=1\linewidth]{figs/linbin_2D_7}
 	\end{figure}
 \end{frame}
 
@@ -344,7 +1307,5 @@
 		# Jake VanderPlas. \emph{Kernel Density Estimation in Python.} 2013 \\ \url{https://jakevdp.github.io/blog/2013/12/01/kernel-density-estimation/}
 	\end{easylist}
 \end{frame}
-
-
 
 \end{document}
